[package]
name = "solana-pumpfun-sniper-bot"
version = "1.0.0"
edition = "2021"
description = "A secure Solana token sniper bot for Pump.fun with Gmail alerts and private key protection"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

# Performance optimizations
[profile.release]
opt-level = 3          # Maximum optimization
debug = false          # No debug info in release
strip = true           # Strip symbols
lto = true            # Link-time optimization
codegen-units = 1      # Better optimization but slower compile
panic = "abort"        # Faster panic handling

[profile.dev]
opt-level = 1          # Some optimization for dev builds

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full", "tracing"] }

# Solana core
solana-sdk = "1.17"
solana-client = "1.17"
solana-rpc-client = "1.17"

# SPL Token support  
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling and utilities
anyhow = "1.0"
dotenv = "0.15"

# Networking and HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Time and math
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base58 encoding for private keys
bs58 = "0.5"

# Additional utilities
rand = "0.8"
